# bot_nfse_nacional

./: .gitignore  README.md  adapters.py  bot.py  browser.py  config.py  dados.py  exceptions.py  gui.py  logging_config.py  pyproject.toml  retry.py  web_form.py
utils/: valida_nomes.py
